--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,17 @@
  *= require_self
  *= require_tree .
  */
+.contents {
+   width: 100%;
+   height:  600px;
+   padding: 10px;
+   index: 0;
+   margin: 5px;
+  .content_div {
+     width: 50%;
+     height: 700px;
+     background-color: white;
+     float: left;
+     index: 1;
+  }
+}
